# python-lexmachina-api-client

./: README.md  pyproject.toml
auth/: auth.py
config/: config.ini
lexmachina/: auth.py  base_request.py  client.py
src/lexmachina/: auth.py  base_request.py  client.py
src/tests/: __init__.py  config.ini  test_attorneys.py  test_case_resolutions.py  test_case_tags.py  test_case_types.py  test_district_case.py  test_get_judges.py  test_get_lawfirms.py  test_get_parties.py  test_get_patents.py  test_health.py  test_list_case_resolutions.py  test_list_courts.py  test_list_damages.py  test_list_events.py  test_list_judgment_sources.py
tests/: config.ini  test_district_case.py  test_get_judges.py  test_health.py
